Bug 1350080 - Prevent decoding (base64/quoted-printable) when saving or forwarding message attachments. r=jorgk